--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,15 @@
         android:theme="@style/Theme.Bogareksa"
         tools:targetApi="31">
         <activity
+            android:name=".HomeSellerActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.pembeli.screen.AddressActivity"
             android:exported="false" />
         <activity
             android:name=".ui.auth.RegisterActivity"
-            android:exported="false"></activity>
-        <activity android:name=".ui.penjual.homePage.HomePageSellerActivity"/>
-
+            android:exported="false" />
+        <activity android:name=".ui.penjual.homePage.HomePageSellerActivity" />
         <activity
             android:name=".ui.auth.LoginActivity"
             android:exported="true">
@@ -31,7 +33,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
