add camera but not already use yet

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera" android:required="false"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,16 +15,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Bogareksa"
         tools:targetApi="31">
-        <activity
-            android:name=".HomeSellerActivity"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".HomeSellerActivity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".ui.pembeli.screen.AddressActivity"
             android:exported="false" />
         <activity
             android:name=".ui.auth.RegisterActivity"
             android:exported="false" />
-        <activity android:name=".ui.penjual.homePage.HomePageSellerActivity" />
+<!--        <activity android:name=".ui.penjual.homePage.HomePageSellerActivity" />-->
         <activity
             android:name=".ui.auth.LoginActivity"
             android:exported="true">
