--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <!-- <uses-feature android:name="android.hardware.camera" /> -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
 
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-feature android:name="android.hardware.camera" android:required="false"/>
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -15,16 +21,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Bogareksa"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name=".HomeSellerActivity"-->
-<!--            android:exported="false" />-->
+        <activity
+            android:name=".ui.penjual.uploadImage.component.CameraActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.penjual.uploadImage.UploadImageActivity"
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".HomeSellerActivity" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name=".ui.pembeli.screen.AddressActivity"
             android:exported="false" />
         <activity
             android:name=".ui.auth.RegisterActivity"
-            android:exported="false" />
-<!--        <activity android:name=".ui.penjual.homePage.HomePageSellerActivity" />-->
+            android:exported="false" /> <!-- <activity android:name=".ui.penjual.homePage.HomePageSellerActivity" /> -->
         <activity
             android:name=".ui.auth.LoginActivity"
             android:exported="true">
