--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <!-- <uses-feature android:name="android.hardware.camera" /> -->
-
-
-    <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
@@ -25,6 +22,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Bogareksa"
         tools:targetApi="31">
+        <activity
+            android:name=".CustomerMainActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.penjual.uploadImage.component.CameraActivity"
             android:exported="false" />
