success display detail from all list product

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.penjual.detailProductFromList.DetailFromListActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.penjual.listProductPage.ProductListActivity"
             android:exported="false" />
         <activity
