--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,10 +30,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.penjual.order.NotificationSellerActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.penjual.detailProductFromList.DetailFromListActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.penjual.listProductPage.ProductListActivity"
+            android:name=".ui.penjual.listProductPage.component.ProductListActivity"
             android:exported="false" />
         <activity
             android:name=".CustomerMainActivity"
