--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-feature android:name="android.hardware.camera" android:required="false"/>
 
@@ -27,6 +28,11 @@
 <!--        <activity android:name=".ui.penjual.homePage.HomePageSellerActivity" />-->
         <activity
             android:name=".ui.auth.LoginActivity"
+            android:exported="false">
+
+        </activity>
+        <activity
+            android:name=".ui.pembeli.CustomerActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
