--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,15 +52,18 @@
             android:exported="false" /> <!-- <activity android:name=".ui.penjual.homePage.HomePageSellerActivity" /> -->
         <activity
             android:name=".ui.auth.LoginActivity"
-            android:exported="false"></activity>
-        <activity
-            android:name=".ui.pembeli.CustomerActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".ui.pembeli.CustomerActivity"
+            android:exported="false">
+
         </activity>
         <activity
             android:name=".MainActivity"
