--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Dec 19 22:17:54 WIB 2023
-sdk.dir=C\:\\Users\\RIFALDLEE\\AppData\\Local\\Android\\Sdk
+#Thu Dec 21 13:43:26 WIB 2023
+sdk.dir=C\:\\Users\\Administrator\\AppData\\Local\\Android\\Sdk
